ubuntu-docs-staging/ubuntu-docs-core.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: staging-ubuntu-docs-core
  labels:
    app: staging-ubuntu-docs
spec:
  selector:
    app: staging-ubuntu-docs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
---

apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: staging-ubuntu-docs-core
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: staging-ubuntu-docs
    spec:
      containers:
        - name: staging-ubuntu-docs-core
          image: prod-comms.docker-registry.canonical.com/docs.ubuntu.com-core
          ports:
            - name: http
              containerPort: 80
