ubuntu-docs-staging/ubuntu-docs.ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: staging-ubuntu-docs
  namespace: default
  labels:
    app: staging-ubuntu-docs
  annotations:
    #kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
  - secretName: staging-ubuntu-docs-tls
    hosts:
    - docs.staging.ubuntu.com
  rules:
  - host: docs.staging.ubuntu.com
    http:
      paths:
      - path: /
        backend:
          serviceName: staging-ubuntu-docs
          servicePort: 80
      - path: /core
        backend:
          serviceName: staging-ubuntu-docs-core
          servicePort: 80
